@@ -15,18 +15,20 @@
 
   ],
   "provides": {
-    "HTTP::Supply::Request": "lib/HTTP/Supply/Request.pm6"
+    "HTTP::Supply": "lib/HTTP/Supply.pm6",
+    "HTTP::Supply::Request": "lib/HTTP/Supply/Request.pm6",
+    "HTTP::Supply::Response": "lib/HTTP/Supply/Response.pm6"
   },
   "build-depends": [
 
   ],
   "license": "Artistic-2.0",
   "auth": "github:zostay",
-  "description": "A modern HTTP request parser",
+  "description": "A modern HTTP pipeline parser",
   "name": "HTTP::Supply",
-  "source-url": "git://github.com/zostay/HTTP-Request-Supply.git",
+  "source-url": "git://github.com/zostay/HTTP-Supply.git",
   "support": {
-    "source": "git://github.com/zostay/HTTP-Request-Supply.git"
+    "source": "git://github.com/zostay/HTTP-Supply.git"
   },
   "version": "0.2.0",
   "authors": [
